backstage-resources/bs-ingress.yaml
---
apiVersion: networking.k8s.io/v1             
kind: Ingress                                                                                    
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: backstage
  name: backstage
  namespace: backstage
spec:
  ingressClassName: traefik
  rules:
  - host: ""
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              number: 80
        path: /
        pathType: Prefix
